--- a/package.json
+++ b/package.json
@@ -1,10 +1,55 @@
 {
+  "name": "docs.cscmoe.cn",
+  "version": "1.0.0",
+  "description": "docs.cscmoe.cn",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hhui64/docs.cscmoe.cn.git"
+  },
+  "author": "hhui64",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/hhui64/docs.cscmoe.cn/issues"
+  },
+  "homepage": "https://github.com/hhui64/docs.cscmoe.cn#readme",
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
+  "dependencies": {
+    "algoliasearch": "^4.22.1",
+    "csstype": "^3.1.3",
+    "entities": "^4.5.0",
+    "esbuild": "^0.19.12",
+    "estree-walker": "^2.0.2",
+    "focus-trap": "^7.5.4",
+    "hookable": "^5.5.3",
+    "magic-string": "^0.30.7",
+    "mark.js": "^8.11.1",
+    "minisearch": "^6.3.0",
+    "mitt": "^3.0.1",
+    "nanoid": "^3.3.7",
+    "perfect-debounce": "^1.0.0",
+    "picocolors": "^1.0.0",
+    "postcss": "^8.4.35",
+    "preact": "^10.19.5",
+    "rfdc": "^1.3.1",
+    "rollup": "^4.12.0",
+    "search-insights": "^2.13.0",
+    "shiki": "^1.1.5",
+    "source-map-js": "^1.0.2",
+    "speakingurl": "^14.0.1",
+    "tabbable": "^6.2.0",
+    "vite": "^5.1.3",
+    "vue": "^3.4.19"
+  },
   "devDependencies": {
+    "@types/markdown-it-footnote": "^3.0.4",
     "markdown-it-footnote": "^4.0.0",
     "vitepress": "^1.0.0-rc.44"
   }
