--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hookable": "^5.5.3",
     "magic-string": "^0.30.7",
     "mark.js": "^8.11.1",
+    "markdown-it-footnote": "^4.0.0",
     "minisearch": "^6.3.0",
     "mitt": "^3.0.1",
     "nanoid": "^3.3.7",
@@ -46,11 +47,11 @@
     "speakingurl": "^14.0.1",
     "tabbable": "^6.2.0",
     "vite": "^5.1.3",
+    "vitepress-markdown-timeline": "^1.2.1",
     "vue": "^3.4.19"
   },
   "devDependencies": {
     "@types/markdown-it-footnote": "^3.0.4",
-    "markdown-it-footnote": "^4.0.0",
     "vitepress": "^1.0.0-rc.44"
   }
 }
