--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "magic-string": "^0.30.7",
     "mark.js": "^8.11.1",
     "markdown-it-footnote": "^4.0.0",
+    "markdown-it-multimd-table": "^4.2.3",
     "minisearch": "^6.3.0",
     "mitt": "^3.0.1",
     "nanoid": "^3.3.7",
