--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,25 +21,30 @@ concurrency:
 
 jobs:
   # 构建工作
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
       - name: Install dependencies
         run: npm ci
+
       - name: Build with VitePress
         run: |
           npm run docs:build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -50,7 +55,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    needs: build
+    needs: Build
     runs-on: ubuntu-latest
     name: Deploy
     steps:
