--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "estree-walker": "^2.0.2",
     "focus-trap": "^7.5.4",
     "hookable": "^5.5.3",
-    "magic-string": "^0.30.7",
+    "magic-string": "^0.30.8",
     "mark.js": "^8.11.1",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-multimd-table": "^4.2.3",
@@ -38,21 +38,21 @@
     "nanoid": "^3.3.7",
     "perfect-debounce": "^1.0.0",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.35",
-    "preact": "^10.19.6",
+    "postcss": "^8.4.38",
+    "preact": "^10.20.1",
     "rfdc": "^1.3.1",
-    "rollup": "^4.12.1",
+    "rollup": "^4.13.0",
     "search-insights": "^2.13.0",
-    "shiki": "^1.1.7",
-    "source-map-js": "^1.0.2",
+    "shiki": "^1.2.1",
+    "source-map-js": "^1.2.0",
     "speakingurl": "^14.0.1",
     "tabbable": "^6.2.0",
-    "vite": "^5.1.6",
+    "vite": "^5.2.6",
     "vitepress-markdown-timeline": "^1.2.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@types/markdown-it-footnote": "^3.0.4",
-    "vitepress": "^1.0.0-rc.45"
+    "vitepress": "^1.0.1"
   }
 }
